--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <!-- services section start -->
       <div class="services_section layout_padding">
          <div class="container">
-            <h1 class="services_taital">our services</h1>
+            <h1 class="services_taital"> What we offer </h1>
             <p class="many_taital">There are many variations of passages of Lorem Ipsum </p>
             <div class="services_section2 layout_padding">
                <div class="row">
