--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                         <a class="nav-link" href="shop.html">Shop</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">nouman</a>
                      </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
-                     <h1 class="call_text">Call Us : +01 1234567890</h1>
+                     <h1 class="call_text">Call Us : 031111111111</h1>
                   </form>
                   <div class="search_icon">
                      <ul>
